IE11 fixes for refactored collection spacings
SRFCMSAL-1454

--- a/source/_patterns/30-organisms/collection/collection.scss
+++ b/source/_patterns/30-organisms/collection/collection.scss
@@ -379,7 +379,7 @@ $background-overlap-wide: 50px;
     @include tablet-up {
       flex-grow: 0;
       flex-shrink: 0;
-      flex-basis: calc(100% / 3);
+      @include IESafeFlexBasis(33.3333334%);
       padding: 0 $teaser-col-gap-tablet-up 32px 0;
     }
 
@@ -472,12 +472,12 @@ $background-overlap-wide: 50px;
     @include tablet-up {
       flex-grow: 0;
       flex-shrink: 0;
-      flex-basis: calc(100% / 3);
+      @include IESafeFlexBasis(33.3333334%);
       padding: 0 $teaser-col-gap-tablet-up 32px 0;
 
       // First element: XL Teaser. Full width
       &:nth-child(1) {
-        flex-basis: 100%;
+        @include IESafeFlexBasis(100%);
       }
     }
 
@@ -493,13 +493,13 @@ $background-overlap-wide: 50px;
     @include tablet-up {
       flex-grow: 0;
       flex-shrink: 0;
-      flex-basis: calc(100% / 3);
+      @include IESafeFlexBasis(33.3333334%);
       padding: 0 $teaser-col-gap-tablet-up 32px 0;
 
       // 1st/2nd element: L teasers, 50% width
       &:nth-child(1),
       &:nth-child(2) {
-        flex-basis: 50%;
+        @include IESafeFlexBasis(50%);
       }
     }
 
@@ -508,11 +508,11 @@ $background-overlap-wide: 50px;
 
       // Special for Duo: spacing between 1st and 2nd teaser is 40px on desktop wide
       &:nth-child(1) {
-        flex-basis: calc(50% + 4px);
+        @include IESafeFlexBasis(calc(50% + 4px));
         padding-right: 40px;
       }
       &:nth-child(2) {
-        flex-basis: calc(50% - 4px);
+        @include IESafeFlexBasis(calc(50% - 4px));
       }
     }
   }
@@ -529,7 +529,7 @@ $background-overlap-wide: 50px;
     @include tablet-up {
       flex-grow: 0;
       flex-shrink: 0;
-      flex-basis: 50%;
+      @include IESafeFlexBasis(50%);
       padding: 0 $teaser-col-gap-tablet-up 16px 0;
     }
 
@@ -546,7 +546,7 @@ $background-overlap-wide: 50px;
   .collection__teaser-item:first-child:nth-last-child(3),
   .collection__teaser-item:first-child:nth-last-child(3) ~ .collection__teaser-item {
     @include desktop-up {
-      flex-basis: calc(100% / 3);
+      @include IESafeFlexBasis(33.3333334%);
       padding-right: $teaser-col-gap-tablet-up;
     }
 
