--- a/source/_patterns/_shame.scss
+++ b/source/_patterns/_shame.scss
@@ -226,11 +226,16 @@ _:-ms-fullscreen,
 
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
   .teaser--with-medium.teaser--size-s {
-    display: none;
-  }
-  .teaser--with-medium.teaser--size-s-on-mobile {
-    @include smartphone {
+    .media-still__indicator {
       display: none;
+    }
+  }
+
+  .teaser--with-medium.teaser--size-s-on-mobile {
+    .media-still__indicator {
+      @include smartphone {
+        display: none;
+      }
     }
   }
 
