--- a/source/assets/critical/_header.scss
+++ b/source/assets/critical/_header.scss
@@ -144,7 +144,6 @@
 .masthead__nav,
 .masthead__button-wrapper {
   opacity: 0;
-  transition: opacity ease-out 200ms;
 }
 
 .masthead__button-wrapper {
